--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 alt="Fotografia de uma placa na mata escrita: Não deixe nada além de pegadas. Não tire nada além de fotos. Não leve nada além de saudades " />
             <p>Desde a infância gostei muito de jogos eletrônicos e de computadores, o que foi um grande incentivo para
                 entrar na área de desenvolvimento. Mas não só de tecnologia vive o desenvolvedor, por isso um dos meus
-                hobbies favoritos é o trekking e acampamento que permite um contato maior com o mundo em que vivemos</p>
+                hobbies favoritos é o trekking e acampamento que permitem um contato maior com o mundo em que vivemos</p>
         </section>
         <section class="formulario-contato" id="forms">
             <form>
