Correção nas importações de arquivos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Importação da estilização desktop e mobile -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media.css" />
 
     <!-- Importação da fonte utilizada do google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,17 +35,17 @@
 
         <!-- Divido as seções que a página irá conte, e defino os ids para poder usar como link no cabeçalho -->
         <section class="resumo" id="resumo">
-            <img src="img/victor.JPG" alt="Uma fotografia do Victor em um fundo azul" />
+            <img src="./img/victor.JPG" alt="Uma fotografia do Victor em um fundo azul" />
             <p class="texto-resumo">Eu me chamo Victor Henrique Vechi, tenho 19 anos. Nasci e fui criado na cidade de
                 Pinhais, região metropolitana de Curitiba. Sou formado como Técnico em Informática pelo IFPR - Pinhais.
                 Atualmente faço graduação em Ciência da Computação também no IFPR - Pinhais</p>
         </section>
         <section class="hobbies" id="hobbies">
-            <img src="img/trilha.jpg"
+            <img src="./img/trilha.jpg"
                 alt="Fotografia de uma placa na mata escrita: Não deixe nada além de pegadas. Não tire nada além de fotos. Não leve nada além de saudades " />
             <p>Desde a infância gostei muito de jogos eletrônicos e de computadores, o que foi um grande incentivo para
                 entrar na área de desenvolvimento. Mas não só de tecnologia vive o desenvolvedor, por isso um dos meus
-                hobbies favoritos é o trekking e acampamento que permitem um contato maior com o mundo em que vivemos</p>
+                hobbies favoritos é o trekking e acampamento que permite um contato maior com o mundo em que vivemos</p>
         </section>
         <section class="formulario-contato" id="forms">
             <form>
@@ -71,7 +71,7 @@
     </main>
     <!-- Defino meu rodapé com um link para minha rede social de contato-->
     <footer>
-        <img src="img/iconInstagram.png" alt="Logotipo da rede social Instagram" class="logotipo" />
+        <img src="./img/iconInstagram.png" alt="Logotipo da rede social Instagram" class="logotipo" />
         <a href="https://www.instagram.com/victorh_vechi/" class="link-instagram">Victor Vechi</a>
     </footer>
 </body>
